# HaskellMeetingFirenze2016

./: .gitmodules  README.md  stack.yaml
chat/: chat.cabal
