name:                chat
version:             0.1.0.0
synopsis:            A simple chat system, for demo purposes.
description:         Please see README.md
license:             BSD3
license-file:        LICENSE
author:              Pasqualino `Titto` Assini
maintainer:          tittoassini@gmail.com
copyright:           Copyright: (c) 2015 Pasqualino `Titto` Assini
category:            Data
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable hchat
  hs-source-dirs:      app
  main-is:             hchat.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , chat
  default-language:    Haskell2010

executable hchat-history
  hs-source-dirs:      app
  main-is:             hchat-history.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , chat
  default-language:    Haskell2010

test-suite hchat-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , chat
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
